Added a POC component for testing some sample code

--- a/index.html
+++ b/index.html
@@ -3,32 +3,45 @@
 
   <head>
     <script src="./libs/angular/angular.js"></script>
+    <script src="./libs/angular-ui-router/angular-ui-router.js"></script>
+
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./libs/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
     <script src="./libs/jquery/jquery.js"></script>
     <script src="./libs/bootstrap/js/bootstrap.js"> </script>
-
-    <script type="text/javascript">
-        angular.module("SocialViewer", []);
-    </script>
-
+   
+   <script src="./social-viewer.js"></script> 
    <script src="./components/github-viewer/github-viewer.controller.js"></script> 
    <script src="./components/github-viewer/github-viewer.component.js"></script> 
-   <script src="./services/github.service.js"> </script>/
-   <script src="./components/landing-page/LandingPageController.js"></script> 
+   <script src="./services/github.service.js"> </script>
+
+   <script src="./components/landing-page/landing-page.controller.js"></script> 
+   <script src="./components/landing-page/landing-page.component.js"></script>
+
+   <script src="./components/poc-page/poc-page.controller.js"></script>
+   <script src="./components/poc-page/poc-page.component.js"></script>
+
+  <script src="./components/poc-page/child/child.component.js"></script>
+  <script src="./components/poc-page/child/child.controller.js"></script>
+
+  <script src="./components/poc-page/grandChild/grandChild.component.js"></script>
+  <script src="./components/poc-page/grandChild/grandChild.controller.js"></script>
+  
+   <script src="./social-viewer.routing.js"></script>
+
   </head>
 
   <body ng-app="SocialViewer">
     <header class="container">
     </header>
-        
-    <div class="container">
-      <div class="row">
-        <git-hub-viewer></git-hub-viewer>
-      </div>
-    </div>
-
+  
+   <ui-view></ui-view>
+   <div class="container">
+      <git-hub-viewer></git-hub-viewer>
+      <!-- <poc-page></poc-page>-->
+   </div>
+  
     <footer class="container"> 
     </footer>
   </body>
