--- a/index.html
+++ b/index.html
@@ -3,49 +3,38 @@
 
   <head>
     <script src="./libs/angular/angular.js"></script>
-    <script src="./libs/angular-ui-router/angular-ui-router.js"></script>
-
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./libs/bootstrap/css/bootstrap.css" rel="stylesheet" />
 
     <script src="./libs/jquery/jquery.js"></script>
     <script src="./libs/bootstrap/js/bootstrap.js"> </script>
-   
-   <script src="./social-viewer.js"></script> 
+
+    <script type="text/javascript">
+        angular.module("SocialViewer", []);
+    </script>
+
    <script src="./components/github-viewer/github-viewer.controller.js"></script> 
    <script src="./components/github-viewer/github-viewer.component.js"></script> 
    <script src="./services/github.service.js"> </script>
+   
+   <script src="./components/google-translator/google-translator.controller.js"></script> 
+   <script src="./components/google-translator/google-translator.component.js"></script> 
+   <script src="./services/translator.service.js"> </script>/
+   
 
-   <script src="./components/landing-page/landing-page.controller.js"></script> 
-   <script src="./components/landing-page/landing-page.component.js"></script>
-
-   <script src="./components/poc-page/poc-page.controller.js"></script>
-   <script src="./components/poc-page/poc-page.component.js"></script>
-
-  <script src="./components/poc-page/child/child.component.js"></script>
-  <script src="./components/poc-page/child/child.controller.js"></script>
-
-  <script src="./components/poc-page/grandChild/grandChild.component.js"></script>
-  <script src="./components/poc-page/grandChild/grandChild.controller.js"></script>
-  
-   <script src="./social-viewer.routing.js"></script>
-
+   <script src="./components/landing-page/LandingPageController.js"></script> 
   </head>
 
   <body ng-app="SocialViewer">
     <header class="container">
     </header>
-  
-   <ui-view></ui-view>
-   <div class="container">
-      <git-hub-viewer></git-hub-viewer>
-      <!-- <poc-page></poc-page>-->
-   </div>
-  
+        
+    <div class="container-fluid">
+        <!-- <git-hub-viewer></git-hub-viewer> -->
+        <google-translator></google-translator>
+    </div>
+
     <footer class="container"> 
     </footer>
   </body>
-
- 
-
 </html>
